examples/pos/typeparsing.effekt
interface Foo {}
def main() {
  try {
    val x1 : ((Int) => String) at {f} = box {f} { (n: Int) => "" };
    ()
  } with f : Foo {}

}